# budjetame

./: .gitignore  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py
app/routers/: movements.py
migrations/: env.py
migrations/versions/: 4ad19c98faef_init.py  9f6805ee51f5_.py
