[project]
name = "budjetame"
version = "0.1.0"
description = "Web app for personal budjeting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]>=0.115.14",
    "ipykernel>=6.29.5",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "sqlmodel>=0.0.24",
]
